# rust_roguelike

./: .gitattributes  Cargo.toml  Cargo.toml.backup  Cargo.toml.backup2  Cargo.toml.temp  LICENSE  aadbsetup.sh  androidndk.sh  animation_fix.sh  build_android.sh  cleanup_warnings.py  final_deprecated_fix.py  fix_deprecated.py  fix_deprecated.sh  fix_methods.py  fixes.sh  insert.sh  run_android.sh  save.json  test_ui_builder.rs  test_ui_imports.rs  tileset_gen.py  tmp.rs  tmp.sh
android/: AndroidManifest.xml
assets/levels/: level1.json  level2.json
assets/sprites/: fruits_guide.txt  meyveler.pyxel  player_parts_guide.txt
src/: constants.rs  lib.rs  main.rs  setup.rs
src/animation/: animator.rs  mod.rs  sprite_sheet.rs
src/audio/: mod.rs
src/components/: enemy.rs  mod.rs
src/core/: camera.rs  config.rs  events.rs  input.rs  mod.rs  save_system.rs  state.rs
src/entities/: collectible.rs  enemy.rs  fruit_spawner.rs  mod.rs  player.rs  player_update.rs  powerup.rs
src/game/: collectible.rs  enemy.rs  mod.rs  player.rs  player_visual.rs  spawning.rs
src/game/abilities/: ability_types.rs  ability_visuals.rs  area_effects.rs  cooldown_display.rs  mod.rs  projectile_system.rs  test_setup.rs
src/game/animation/: mod.rs
src/game/audio/: mod.rs
src/game/combat/: damage.rs  effects.rs  mod.rs  projectiles.rs
src/game/items/: mod.rs
src/game/movement/: mod.rs
src/game/progression/: mod.rs
src/resources/: score.rs  star_spawn_timer.rs
src/setup/: camera.rs  mod.rs  spawn.rs
src/stages/: mod.rs  stage_manager.rs  stage_transition.rs
src/states/: mod.rs
src/systems/: collision.rs  collisions.rs  confine_enemy.rs  confine_player.rs  enemy_movement.rs  mod.rs  player_movement.rs  score.rs  star_spawning.rs  update_enemy_direction.rs
src/tilemap/: level_loader.rs  mod.rs  pyxel_helper.rs  tile_animator.rs  tile_loader.rs  tilemap.rs  tilemap_config.rs
src/ui/: ability_display.rs  achievement_display.rs  health_bars.rs  hud.rs  main_menu.rs  minimap.rs  mod.rs  pause_menu.rs  pause_menu_old.rs  powerup_display.rs  shop_menu.rs  talent_menu.rs
src/utils/: mod.rs
src/world/: collision.rs  level_loader.rs  mod.rs  tile_animator.rs  tilemap.rs
(+24 files in other folders)
