[package]
name = "rust_roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking", "wayland", "android_shared_stdcxx"] }
bevy_ecs_tilemap = "0.14"
rand = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = "0.21"

[lib]
name = "rust_roguelike"
crate-type = ["cdylib", "rlib"]

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
min_sdk_version = 24
target_sdk_version = 33
compile_sdk_version = 33

[package.metadata.android.application]
label = "Rust Roguelike"

[[package.metadata.android.permission]]
name = "android.permission.INTERNET"
